# copper

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  lychee.toml  pipeline.toml
copperd/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  dev.env  toolchain.toml
copperd/crates/audiofile/: Cargo.toml
copperd/crates/audiofile/src/: lib.rs
copperd/crates/copperd/: Cargo.toml
copperd/crates/copperd/src/: main.rs
copperd/crates/ds-core/: Cargo.toml
copperd/crates/ds-core/src/: data.rs  errors.rs  handles.rs  lib.rs
copperd/crates/ds-impl/: Cargo.toml
copperd/crates/ds-impl/src/: lib.rs
copperd/crates/migrate/: Cargo.toml
copperd/crates/migrate/src/: lib.rs
copperd/crates/node-base/: Cargo.toml
copperd/crates/node-base/src/: data.rs  lib.rs
copperd/crates/pipeline/: Cargo.toml
copperd/crates/util/: Cargo.toml
copperd/crates/util/src/: names.rs
copperd/lib-common/migrate/src/: lib.rs
copperd/lib-common/storaged/: Cargo.toml
copperd/lib-common/storaged/src/: data.rs  transaction.rs
copperd/lib-common/util/: Cargo.toml
copperd/lib-common/util/src/: lib.rs
copperd/lib-pipelined/audiofile/: Cargo.toml
copperd/lib-pipelined/basic/: Cargo.toml
copperd/lib-pipelined/basic/src/: constant.rs  hash.rs  ifnone.rs  lib.rs
copperd/lib-pipelined/node-base/: Cargo.toml
copperd/lib-pipelined/node-base/src/: data.rs  lib.rs
copperd/lib-pipelined/pipeline/: Cargo.toml
copperd/lib-pipelined/pipeline/src/: lib.rs  nodes.rs
copperd/lib-pipelined/storaged/: Cargo.toml
copperd/lib-pipelined/storaged/src/: lib.rs
copperd/lib-storaged/database/: Cargo.toml
copperd/lib-storaged/util/: Cargo.toml
copperd/lib/edged/: Cargo.toml
copperd/lib/edged/src/: apidata.rs  id.rs  info.rs  lib.rs
copperd/lib/itemdb/: Cargo.toml
copperd/lib/itemdb/src/: data.rs  info.rs  lib.rs  transaction.rs
copperd/lib/jobqueue/: Cargo.toml
copperd/lib/jobqueue/src/: id.rs  info.rs  lib.rs
copperd/lib/migrate/: Cargo.toml
copperd/lib/migrate/src/: lib.rs
copperd/lib/pipelined/: Cargo.toml
copperd/lib/pipelined/src/: data.rs  json.rs  lib.rs  structs.rs
copperd/lib/piper/: Cargo.toml
copperd/lib/piper/src/: data.rs  lib.rs
copperd/lib/storage/: Cargo.toml
copperd/lib/storage/src/: lib.rs
copperd/lib/storaged/: Cargo.toml
copperd/lib/storaged/src/: data.rs  id.rs  info.rs  lib.rs  transaction.rs
copperd/lib/util/: Cargo.toml
copperd/lib/util/src/: env.rs  lib.rs  logging.rs  mime.rs  names.rs  s3client.rs
copperd/nodes/audiofile/: Cargo.toml
copperd/nodes/basic/: Cargo.toml
copperd/nodes/basic/src/: additem.rs  constant.rs  hash.rs  ifnone.rs  lib.rs
copperd/nodes/storage/: Cargo.toml
copperd/nodes/storage/src/: additem.rs  lib.rs
copperd/nodes/storaged/: Cargo.toml
copperd/nodes/storaged/src/: additem.rs  lib.rs
copperd/pipelines/: cover.toml
crates/db-blobstore/: Cargo.toml
crates/db-blobstore/src/: api.rs
crates/db-blobstore/src/fs/: init.sql
crates/metadb/: Cargo.toml
crates/metadb/src/: api.rs  data.rs  lib.rs
crates/metadb/src/sqlite/: db.rs
crates/pipeline/: Cargo.toml
crates/pipeline-nodes/: Cargo.toml
crates/pipeline-nodes/src/: data.rs  errors.rs  helpers.rs  lib.rs  nodeinstance.rs  nodetype.rs  traits.rs
crates/pipeline-nodes/src/database/: additem.rs  finditem.rs
crates/pipeline-nodes/src/input/: file.rs
crates/pipeline-nodes/src/output/: additem.rs  addtodataset.rs  mod.rs  storage.rs
crates/pipeline-nodes/src/tags/: extractcovers.rs  extracttags.rs  striptags.rs
crates/pipeline-nodes/src/util/: constant.rs  hash.rs  ifnone.rs  mod.rs  noop.rs  print.rs
crates/pipeline/src/: api.rs  data.rs  errors.rs  labels.rs  lib.rs  node.rs  pipeline.rs  portspec.rs  runner.rs
crates/pipeline/src/graph/: finalized.rs  graph.rs  mod.rs  util.rs
crates/pipeline/src/input/: file.rs  mod.rs
crates/pipeline/src/nodes/: ifnone.rs  mod.rs  nodeinstance.rs  nodetype.rs  striptags.rs  tags.rs
crates/pipeline/src/output/: mod.rs  storage.rs
crates/pipeline/src/pipeline/: mod.rs  pipeline.rs
crates/pipeline/src/runner/: mod.rs  runner.rs  single.rs  util.rs
crates/pipeline/src/syntax/: builder.rs  errors.rs  internalnode.rs  labels.rs  mod.rs  ports.rs  prepareresult.rs  spec.rs
crates/storage/: Cargo.toml
crates/storage/src/: api.rs  data.rs  errors.rs  lib.rs  mem.rs
crates/storage/src/sea/: README.md  dataset.rs  errors.rs  mod.rs
crates/storage/src/sqlite/: dataset.rs  init_db.sql
crates/ufo/: Cargo.toml
crates/ufo-api/: Cargo.toml
crates/ufo-api/src/: data.rs  lib.rs  pipeline.rs  runner.rs  status.rs  upload.rs
crates/ufo/src/: main.rs  model.rs
crates/ufo/src/ingest/: file.rs  mod.rs
crates/ufo/src/storage/: api.rs  mem.rs  mod.rs
crates/ufoc/: Cargo.toml
crates/ufoc/src/: main.rs
crates/ufoc/src/api/: client.rs  errors.rs  mod.rs  upload.rs
crates/ufod/: Cargo.toml
crates/ufod/src/: config.rs  lib.rs  main.rs  pipeline.rs  status.rs  upload.rs
crates/ufod/src/pipeline/: apidata.rs  mod.rs  node.rs  pipeline.rs  pipelines.rs  run.rs
crates/ufod/src/status/: completed.rs  runner.rs
crates/ufod/src/upload/: finish.rs  new_file.rs  uploader.rs
storaged/crates/database/: Cargo.toml
storaged/crates/database/src/: lib.rs
ufod/: .gitignore  Cargo.toml
ufod/crates/audiofile/: Cargo.toml
ufod/crates/audiofile/src/: lib.rs
ufod/crates/audiofile/tests/: README.md
ufod/crates/copperd/: Cargo.toml
ufod/crates/database/: Cargo.toml
ufod/crates/database/src/: database.rs
ufod/crates/db-metastore/: Cargo.toml
ufod/crates/db-metastore/src/: api.rs  data.rs
ufod/crates/ds-core/: Cargo.toml
ufod/crates/ds-core/src/: data.rs  errors.rs  handles.rs
ufod/crates/ds-impl/: Cargo.toml
ufod/crates/node-base/: Cargo.toml
ufod/crates/node-base/src/: data.rs  lib.rs
ufod/crates/pipeline/: Cargo.toml
ufod/crates/pipeline-nodes/: Cargo.toml
ufod/crates/pipeline-nodes/src/: data.rs  errors.rs  helpers.rs  (+4 more)
ufod/crates/ufod/: Cargo.toml
ufod/crates/util/: Cargo.toml
ufod/pipelines/: audiofile.toml
(+911 files in other folders)
