[package]
name = "ufo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
lofty = "0.19.2"
petgraph = "0.6.5"
serde = { version = "1.0.201", features = ["serde_derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
toml = "0.8.12"
