[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
rpath = false


[workspace]
members = ["crates/*"]
default-members = ["crates/ufo"]
resolver = "2"


[workspace.package]
keywords = []
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
categories = []
authors = []
homepage = ""
repository = ""
license = ""
documentation = ""
readme = ""


[workspace.dependencies]
ufo-pipeline = { path = "crates/pipeline" }
ufo-pipeline-nodes = { path = "crates/pipeline-nodes" }
ufo-database = { path = "crates/database" }
ufo-util = { path = "crates/util" }
ufo = { path = "crates/ufo" }
ufo-audiofile = { path = "crates/audiofile" }

crossbeam = "0.8.4"
anyhow = "1.0.83"
itertools = "0.12.1"
petgraph = "0.6.5"
serde = { version = "1.0.201", features = ["serde_derive"] }
smartstring = { version = "1.0.1", features = ["serde"] }
toml = "0.8.12"
serde_with = "3.8.1"
futures = "0.3.30"
sha2 = "0.10.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nu-ansi-term = "0.50.0"
walkdir = "2"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
crossterm = "0.27.0"

[workspace.lints]
