[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
rpath = false


[workspace]
members = ["bin/*", "lib/*", "nodes/*"]
default-members = ["bin/piper", "bin/edged"]
resolver = "2"

[workspace.package]
keywords = []
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
categories = []
authors = []
homepage = ""
repository = ""
license = ""
documentation = ""
readme = ""

[workspace.lints.rust]
unused_import_braces = "deny"
unit_bindings = "deny"
single_use_lifetimes = "deny"
non_ascii_idents = "deny"
macro_use_extern_crate = "deny"
elided_lifetimes_in_paths = "deny"
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
unused_crate_dependencies = "warn"
#variant_size_differences = "warn"
redundant_lifetimes = "warn"
missing_docs = "allow"


[workspace.lints.clippy]
needless_return = "allow"
new_without_default = "allow"
tabs_in_doc_comments = "allow"


# Extra
expect_used = "deny"
#unwrap_used = "deny"
#panic = "deny"
dbg_macro = "deny"
allow_attributes = "deny"
create_dir = "deny"
filetype_is_file = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
print_stderr = "deny"
print_stdout = "deny"
str_to_string = "deny"
string_add = "deny"
string_to_string = "deny"
unimplemented = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
#wildcard_enum_match_arm = "deny"

# Pedantic
large_types_passed_by_value = "deny"
match_on_vec_items = "deny"

# Cargo
wildcard_dependencies = "deny"
negative_feature_names = "deny"
redundant_feature_names = "deny"
#multiple_crate_versions = "deny"

[workspace.dependencies]
# Shared libraries
copper-util = { path = "lib/util" }
copper-migrate = { path = "lib/migrate" }
copper-itemdb = { path = "lib/itemdb" }
copper-piper = { path = "lib/piper" }
copper-edged = { path = "lib/edged" }
copper-jobqueue = { path = "lib/jobqueue" }

# Node implementations
nodes-basic = { path = "nodes/basic" }
nodes-audiofile = { path = "nodes/audiofile" }

# Services
# (the versions of these might matter A LOT)
aws-sdk-s3 = "1.48.0"
aws-config = "1.5.5"

argon2 = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam = "0.8.4"
futures = "0.3.30"
smartstring = { version = "1.0.1", features = ["serde"] }
sha2 = "0.10.8"
petgraph = "0.6.5"
anyhow = "1.0.83"
itertools = "0.12.1"
walkdir = "2"
bytes = "1.6.0"
rand = "0.8.5"
md5 = "0.7.0"
paste = "1.0.15"
base64 = "0.22.1"
async-trait = "0.1.81"
envy = "0.4.2"
dotenvy = "0.15.7"
url = { version = "2.5.0", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
axum = { version = "0.7.5", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie", "async-read-body"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0.201", features = ["serde_derive", "rc"] }
serde_json = "1.0.68"
serde_with = "3.8.1"
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras"] }
thiserror = "2.0.1"

# Because we can't clone tokio's `broadcast::Receiver`
async-broadcast = "0.7.1"


[workspace.dependencies.time]
version = "0.3.36"
features = ["serde-human-readable", "local-offset"]


[workspace.dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "time", "json", "postgres"]

[workspace.dependencies.utoipa-swagger-ui]
version = "7.1.1-alpha.0"
# "vendored" removes the need for `curl` when building.
# As an alternative, use "reqwest"
features = ["axum", "debug-embed", "vendored"]


[workspace.dependencies.reqwest]
version = "0.12.4"
features = ["json", "blocking", "multipart", "stream", "rustls-tls"]
# If this is enabled, reqwest will pull native-tls.
# This makes static linking very difficult.
default-features = false
