[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
rpath = false


[workspace]
members = ["crates/*"]
default-members = ["crates/ufod"]
resolver = "2"


[workspace.package]
keywords = []
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
categories = []
authors = []
homepage = ""
repository = ""
license = ""
documentation = ""
readme = ""


[workspace.lints]


[workspace.dependencies]
ufo-pipeline = { path = "crates/pipeline" }
ufo-pipeline-nodes = { path = "crates/pipeline-nodes" }
ufo-util = { path = "crates/util" }
ufo-audiofile = { path = "crates/audiofile" }

ufo-ds-core = { path = "crates/ds-core" }
ufo-ds-impl = { path = "crates/ds-impl" }

ufod = { path = "crates/ufod" }


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallism & async
crossbeam = "0.8.4"
futures = "0.3.30"

# Utility
smartstring = { version = "1.0.1", features = ["serde"] }
sha2 = "0.10.8"
petgraph = "0.6.5"
anyhow = "1.0.83"
itertools = "0.12.1"
walkdir = "2"
bytes = "1.6.0"
rand = "0.8.5"
md5 = "0.7.0"
argon2 = "0.5.3"

# Network
reqwest = { version = "0.12.4", features = [
	"json",
	"blocking",
	"multipart",
	"stream",
] }
url = { version = "2.5.0", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
tower-http = { version = "0.5.2", features = ["trace"] }

# Serde
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_json = "1.0.68"
toml = "0.8.12"
serde_with = "3.8.1"

# Other
sqlx = { version = "0.7", features = ["sqlite", "runtime-async-std"] }
#clap = { version = "4.5.4", features = ["derive"] }
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = [
	"axum",
	"debug-embed",
] }
