[package]
name = "ufo-metadb"
description = "TODO"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-util = { workspace = true }
ufo-pipeline = { workspace = true }
ufo-blobstore = { workspace = true }

serde = { workspace = true }
smartstring = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }

sqlx = { version = "0.7", features = ["sqlite", "runtime-async-std"] }
