[package]
name = "ufo-pipeline"
description = "TODO"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-storage = { workspace = true }
ufo-util = { workspace = true }

serde = { workspace = true }
smartstring = { workspace = true }
lofty = { workspace = true }
petgraph = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
