[package]
name = "ufo-storage"
description = "TODO"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-util = { workspace = true }

serde = { workspace = true }
smartstring = { workspace = true }
futures = { workspace = true }

# TODO: should this be a workspace dep?
sea-orm = { version = "0.12.15", features = [
	"sqlx-sqlite",
	"macros",
	"runtime-async-std-native-tls",
] }
sea-orm-migration = "0.12.15"
