[[bin]]
name = "ufo"
path = "src/main.rs"


[package]
name = "ufo"
description = "TODO"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-pipeline = { workspace = true }
ufo-pipeline-nodes = { workspace = true }
ufo-metadb = { workspace = true }
ufo-util = { workspace = true }
ufo-blobstore = { workspace = true }

anyhow = { workspace = true }
smartstring = { workspace = true }
serde = { workspace = true }
