[[bin]]
name = "ufoc"
path = "src/main.rs"


[package]
name = "ufoc"
description = "UFO command-line client"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-pipeline = { workspace = true }
ufo-pipeline-nodes = { workspace = true }
ufo-util = { workspace = true }
ufo-api = { workspace = true }

ufo-database = { workspace = true }
ufo-db-blobstore = { workspace = true }
ufo-db-metastore = { workspace = true }
ufo-db-pipestore = { workspace = true }

sha2 = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
smartstring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nu-ansi-term = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
crossterm = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
