[[bin]]
name = "ufod"
path = "src/main.rs"

[package]
name = "ufod"
description = "UFO daemon"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-pipeline = { workspace = true }
ufo-pipeline-nodes = { workspace = true }
ufo-database = { workspace = true }
ufo-util = { workspace = true }
ufo-api = { workspace = true }

ufo-db-metastore = { workspace = true }
ufo-db-pipestore = { workspace = true }
ufo-db-blobstore = { workspace = true }

futures = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
smartstring = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
walkdir = { workspace = true }
