[[bin]]
name = "copperd"
path = "src/main.rs"

[package]
name = "copperd"
description = "Copper daemon"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-pipeline = { workspace = true }
copper-node-base = { workspace = true }
copper-util = { workspace = true }
copper-ds-core = { workspace = true }
copper-ds-impl = { workspace = true }
copper-audiofile = { workspace = true }
copper-migrate = { workspace = true }

sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
smartstring = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
itertools = { workspace = true }
argon2 = { workspace = true }
axum-extra = { workspace = true }
time = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
