[package]
name = "copper-ds-core"
description = "Copper's base api for datasets"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }
copper-pipeline = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
smartstring = { workspace = true }
utoipa = { workspace = true }
itertools = { workspace = true }
