[package]
name = "copper-node-base"
description = "Basic pipeline nodes and helper code for other implementations"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }
copper-pipeline = { workspace = true }
copper-ds-core = { workspace = true }
copper-ds-impl = { workspace = true }

serde = { workspace = true }
smartstring = { workspace = true }
sha2 = { workspace = true }
md5 = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
