[package]
name = "copper-itemdb"
description = "Copper's item database client"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }
copper-migrate = { workspace = true }

tracing = { workspace = true }
smartstring = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
