[package]
name = "copper-pipelined"
description = ""
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }
copper-storaged = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
aws-sdk-s3 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
smartstring = { workspace = true }
utoipa = { workspace = true }
