[package]
name = "copper-pipelined"
description = ""
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }
copper-storage = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
smartstring = { workspace = true }
utoipa = { workspace = true }
async-broadcast = { workspace = true }
