[package]
name = "copper-storaged"
description = ""
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }

smartstring = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
itertools = { workspace = true }
