[package]
name = "copper-util"
description = "Shared utilities"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
dotenvy = { workspace = true }
envy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
petgraph = { workspace = true }
utoipa = { workspace = true }
aws-sdk-s3 = { workspace = true }
smartstring = { workspace = true }
