[package]
name = "nodes-audiofile"
description = "Audio metadata decoders"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
copper-util = { workspace = true }
copper-piper = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
smartstring = { workspace = true }
serde_with = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
rand = { workspace = true }
paste = { workspace = true }
itertools = { workspace = true }
