[package]
name = "ufo-database"
description = "TODO"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-util = { workspace = true }
ufo-db-blobstore = { workspace = true }
ufo-db-metastore = { workspace = true }
ufo-db-pipestore = { workspace = true }
