[package]
name = "ufo-db-metastore"
description = "TODO"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-util = { workspace = true }
ufo-pipeline = { workspace = true }
ufo-db-blobstore = { workspace = true }

serde = { workspace = true }
smartstring = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true }
