[package]
name = "ufo-ds-impl"
description = "Dataset implementations"
categories = { workspace = true }
keywords = { workspace = true }
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }

[lints]
workspace = true

[dependencies]
ufo-ds-core = { workspace = true }
ufo-pipeline = { workspace = true }
ufo-util = { workspace = true }

walkdir = { workspace = true }
sqlx = { workspace = true }
smartstring = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
